--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
               </p>
             </div>
           </div>
-          <div class="fourcol last">
+          <div class="fourcol">
             <div class="skillsTrioWrap">
               <div class="skillsTrioIMG">
                 <img src="assets/img/skills/express.png" class="fa java" width="250px" height="150px"/>
