--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
   <div id="header">
-    <div class="center">
+    <!-- <div class="center"> -->
       <div id="navigation-bar" class="animated bounceInDown">
         <a class="name" data-scroll href="#"><span class="lf">SEOP</span><span class="rt">Portfolio</span></a>
         <div class="navlinks-container">
@@ -39,7 +39,7 @@
           </div>
         </div>
       </div>
-    </div>
+    <!-- </div> -->
   </div>
   <div id="about">
     <div class="center">
