--- a/index.html
+++ b/index.html
@@ -86,8 +86,10 @@
               </p>
             </div>
           </div>
+        </div>
           <br/><br/>
           <h2 class="ski">FRAMEWORK</h2>
+        <div class="row">
           <div class="fourcol">
             <div class="skillsTrioWrap">
               <div class="skillsTrioIMG">
@@ -118,7 +120,9 @@
               </p>
             </div>
           </div>
-          <h2 class="ski">LIBRARY & TOOL</h2>
+        </div>
+        <h2 class="ski">LIBRARY & TOOL</h2>
+        <div class="row">
           <div class="sixcol">
             <div class="skillsTrioWrap">
               <div class="skillsTrioIMG">
