--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div id="navigation-bar" class="animated bounceInDown">
         <a class="name" data-scroll href="#"><span class="lf">SEOP</span><span class="rt">Portfolio</span></a>
         <div class="navlinks-container">
-          <a class="navlink" data-scroll href="#about">About</a>
+          <a class="navlink" data-scroll href="#about">About Me</a>
           <a class="navlink" data-scroll href="#skills">Skills</a>
           <a class="navlink" data-scroll href="#works">Works</a>
           <a class="navlink" data-scroll href="#contact">Contact</a>
@@ -42,10 +42,11 @@
     <!-- </div> -->
   </div>
   <div id="about">
-    <div class="center">
-      <h2 class="abt">About</h2>
+    <div class="row">
+      <h2 class="abt">About Me</h2>
       <p class="abtText">
-        
+        저는 취미생활이 개발이라고 말할 자신이 있을 정도로 개발하는 것이 즐겁습니다.
+어떻게 하면 좀 더 창의적이고 문제해결 능력을 지닌 좋은 개발자가 될 수 있을지 항상 고민하고 성장하기 위해 노력하고 있습니다.
       </p>
     </div>
   </div>
